--- a/docs/src/plasma/qtplasmac.adoc
+++ b/docs/src/plasma/qtplasmac.adoc
@@ -4168,7 +4168,7 @@ Therefore the length of the wiggle and the feedrate need to be considered in cal
 
 For example:
 
-* A feed rate of 1080 mm/m (18 mm/s)
+* A feed rate of 1080 mm/min (18 mm/s)
 * A wiggle movement of 4mm for 3 oscillation
 
 This means that the length of the wiggle is 4 x 3 = 12mm. At the 18 mm/s feedrate, the pierce delay needs to be approx 0.7 seconds to support the wiggle distance at pierce height.
@@ -4225,27 +4225,27 @@ This code shows us the following information in order:
 ** Pierce Height is 4 mm.
 ** Pierce Delay is 1 second.
 ** Cut Height is 1.5 mm.
-** Cut Feed Rate is 490 mm/m.
+** Cut Feed Rate is 490 mm/min.
 . Mode is set to 2 which is ramp pierce.
 . Pierce Motion Delay is 50% of Pierce Delay (0.5 seconds).
 . Pierce End Height is 2.5 mm
 . Cut Height Delay is 1 second.
-. Gouge Speed is 980 mm/m.
+. Gouge Speed is 980 mm/min.
 . Gouge Distance is 5 mm
-. Creep Speed is 245 mm/m.
+. Creep Speed is 245 mm/min.
 . Creep Distance is 3 mm.
 
 With this information the following behavior can be described:
 
 It is important to note that accelerations and decelerations are omitted from the following calculations.
 
-The torch will start at Pierce Height (4 mm from the material) and start traveling at a Gouge Speed of 980 mm/m (16.3 mm/s) for a Gouge Distance of 5 mm which will consume 0.3 seconds (5 mm / 16.3 mm/s = 0.3 s) of the 0.5 s Pierce Motion Delay.
+The torch will start at Pierce Height (4 mm from the material) and start traveling at a Gouge Speed of 980 mm/min (16.3 mm/s) for a Gouge Distance of 5 mm which will consume 0.3 seconds (5 mm / 16.3 mm/s = 0.3 s) of the 0.5 s Pierce Motion Delay.
 
-When the Gouge Distance is reached, the torch speed is set to a Creep Speed of 245 mm/m (4 mm/s) for a Creep Distance of 3 mm. The Creep Distance will take roughly 0.7 seconds to complete (3 mm / 4 mm/s = 0.7 s).
+When the Gouge Distance is reached, the torch speed is set to a Creep Speed of 245 mm/min (4 mm/s) for a Creep Distance of 3 mm. The Creep Distance will take roughly 0.7 seconds to complete (3 mm / 4 mm/s = 0.7 s).
 
 The torch height will remain at 4 mm for another 0.2 seconds (0.5 s (Pierce Motion Delay) - 0.3 s (Gouge Distance at Gouge Speed) = 0.2 s) after which the torch will begin descending to a Pierce End Height of 2.5 mm over the remaining 0.5 seconds of the material's Pierce Delay. Since there are 0.5 seconds of the material's Pierce Delay remaining, as well as 0.5 seconds left at Creep Speed, the Creep Distance will be covered at the same time the Pierce End Height is reached.
 
-When the Creep Distance has been reached, the torch speed will be set to the material's Cut Feed Rate of 490 mm/m. Since there is a 1 second Cut Height Delay that started at the end of the material's Pierce Delay the transition to a Cut Height of 1.5 mm will occur after the remaining 1 second Cut Height Delay has expired.
+When the Creep Distance has been reached, the torch speed will be set to the material's Cut Feed Rate of 490 mm/min. Since there is a 1 second Cut Height Delay that started at the end of the material's Pierce Delay the transition to a Cut Height of 1.5 mm will occur after the remaining 1 second Cut Height Delay has expired.
 
 The above text should demonstrate that there is quite a bit of configuration and subtlety can be achieved through experimentation and the careful use of different parameter combinations.
 
