--- a/docs/src/plasma/qtplasmac.adoc
+++ b/docs/src/plasma/qtplasmac.adoc
@@ -880,7 +880,7 @@ The main purpose of this is to allow a quick test for a shorted torch tip.
 |TORCH ON ENABLE |0, 1, 2 |This box toggles between Enabling and Disabling the torch. +
 This box defaults to unfilled (disabled) when QtPlasmaC is first run. +
 This box must be filled to change it to "Torch Enabled" before material cutting can commence. +
-If this box is not filled, then running a loaded program will cause the machine to run the cycle without firing the torch. This is sometimes referred to as a "dry run".
+If this box is not filled, then running a loaded program will cause the machine to run the cycle without firing the torch. This is sometimes referred to as a "dry run". If the user has a laser installed, then it is also possible to dry run with the laser. See the <<plasma:laser,LASER section>> for detailed instructions.
 |VELOCITY ANTI DIVE |0, 1, 2 |Indicates that the THC is locked at the current height due to the cut velocity falling below the Velocity Anti Dive (VAD) Threshold percentage set on the <<plasma:parameters-tab,PARAMETERS Tab>>.
 |VELOCITY ANTI DIVE ENABLE |0, 1, 2 |This box toggles between Enabling and Disabling VELOCITY ANTI DIVE.
 |VOID ANTI DIVE |0, 1 |Indicates that the THC is locked due to a void being sensed.
@@ -1758,6 +1758,11 @@ qtplasmac.laser_on
 
 If an alignment laser has been set up then it is possible to use the laser during <<plasma:cut-recovery,CUT RECOVERY>> for accurate positioning of the new start coordinates.
 
+*To dry run the G-code file with the laser:*
+. Ensure there are no bounds errors and CYCLE START is enabled.
+. Press the *LASER* button and hold for longer than 750 mSec, the laser will turn on and the dry run will start.
+. Release the *LASER* button.
+
 [[plasma:camera]]
 === CAMERA
 
@@ -2414,8 +2419,6 @@ If the user has the Run From Line option enabled in the GUI SETTINGS section of 
 . Clicking any line in the Preview Window
 . Clicking any line in the G-code Window
 
-Note that the "Run From Line"-function will run from the beginning of the selected line.
-
 It is important to note that G-code programs can be run from any selected line using this method, however a leadin may not be possible depending on the line selected.
 In this case, an error message will be displayed to let the user know the leadin calculation was not possible.
 
@@ -2430,7 +2433,13 @@ If the user selects a line while cutter compensation is active and clicks *"SELE
 
 It is possible to select a new line while Run From Line is active.
 
-image::images/qtplasmac_run_from_line.png[width=350,align="center"]
+image::images/qtplasmac_rfl_options.png[width=200,align="center"]
+
+==== HERE TO END
+
+*HERE TO END* will run from the beginning of the selected line to the end of the G-code file with the option of adding a leadin.
+
+image::images/qtplasmac_rfl_here_to_end.png[width=350,align="center"]
 
 [cols="4,16",options="header"]
 |===
@@ -2452,6 +2461,13 @@ Program will run from selected line with no leadin applied"
 
 After pressing *LOAD*, the blinking "SELECTED _nn_" button will change to *RUN FROM LINE CYCLE START* button.
 Click this button to start the program from the beginning of the selected line.
+
+==== THIS CUTPATH
+
+*THIS CUTPATH* will run only the cutpath that the seleceted segment is a part of.
+
+The blinking "SELECTED _nn_" button will change to *RUN FROM LINE CYCLE START* button.
+Click this button to run the selected cutpath.
 
 *Run From Line selections may be canceled in the following ways:*
 
