Wrap long lines in one verbatim block in hal_gpio.adoc for better PDF layout.

--- a/docs/src/drivers/hal_gpio.adoc
+++ b/docs/src/drivers/hal_gpio.adoc
@@ -125,13 +125,15 @@ SUBSYSTEM=="bcm2835-gpiomem", GROUP="gpio", MODE="0660"
 SUBSYSTEM=="gpio", GROUP="gpio", MODE="0660"
 SUBSYSTEM=="gpio*", PROGRAM="/bin/sh -c '\
 	chown -R root:gpio /sys/class/gpio && chmod -R 770 /sys/class/gpio;\
-	chown -R root:gpio /sys/devices/virtual/gpio && chmod -R 770 /sys/devices/virtual/gpio;\
+	chown -R root:gpio /sys/devices/virtual/gpio &&\
+	chmod -R 770 /sys/devices/virtual/gpio;\
 	chown -R root:gpio /sys$devpath && chmod -R 770 /sys$devpath\
 '"
 
 SUBSYSTEM=="pwm*", PROGRAM="/bin/sh -c '\
 	chown -R root:gpio /sys/class/pwm && chmod -R 770 /sys/class/pwm;\
-	chown -R root:gpio /sys/devices/platform/soc/*.pwm/pwm/pwmchip* && chmod -R 770 /sys/devices/platform/soc/*.pwm/pwm/pwmchip*\
+	chown -R root:gpio /sys/devices/platform/soc/*.pwm/pwm/pwmchip* &&\
+	chmod -R 770 /sys/devices/platform/soc/*.pwm/pwm/pwmchip*\
 '"
 ----
 
