--- a/docs/src/man/man1/mitsub_vfd.1.adoc
+++ b/docs/src/man/man1/mitsub_vfd.1.adoc
@@ -66,7 +66,7 @@ don't change
 *PARAMETER 549* communication protocol - 0 +
 computer link protocol - don't change - (not all VFDs have this)
 
-== 
+== NOTES
 
 This driver assumes certain other VFD settings: -That the motor
 frequency status is set to show Hertz. +
