Docs: remove bogus capitalisation in manpage name.

--- a/docs/man/man1/melfagui.1
+++ b/docs/man/man1/melfagui.1
@@ -35,7 +35,7 @@ See the main LinuxCNC documentation for more details.
 http://linuxcnc.org/docs/html/gui/vismach.html
 .
 .SH "SEE ALSO"
-\fBLinuxCNC(1)\fR
+\fBlinuxcnc(1)\fR
 
 Much more information about LinuxCNC and HAL is available in the LinuxCNC
 and HAL User Manuals, found at /usr/share/doc/LinuxCNC/.
